# binara

./: .gitignore  CMakeLists.txt  README.md  default_configuration.toml  environment.yml  gobo_corner_plot.py  job_script.sh  open_mp_check.c  pyproject.toml
.github/workflows/: build_wheels.yml
docs/source/: index.md
docs/source/developer_guides/: guide_for_developers.md
docs/source/reference/: basic_usage.md
docs/source/user_guides/: guide_for_building.md  how_to_run_binara.md  index.md
src/: automation_plotting_pt3.py  automation_pt2.py  binara_ext.cpp  chains.py  chains_progress.py  configuration.cpp  configuration.h  eclipse_method_enum.h  finding_model_lc_fluxes.c  folding_and_binning.py  folding_and_binning_improved.py  grapher.c  helper.py  helper2.py  improved_error_bars.py  init_data.py  likelihood.c  likelihood.cpp  likelihood.h  makingCornerPlot.py  mcmc_wrapper.c  mcmc_wrapper.cpp  mcmc_wrapper.h  modelling.py  period_vs_ecc_plot.py  plot_fluxes.py  plot_mcmc_output_light_curves.py  producing_lc.py  python_interrupt_handling.cpp  python_interrupt_handling.h  random_generator.cpp  random_generator.h  red_chi_square_distr.py  single_vs_multiple_sectors.py  stitched_tic.py  util.c  util.cpp  util.h
src/binara/: __init__.py  enforce_expected_data_directory_tree.py  init_data.py
src/binara/internal/: binara_ext.pyi  data_preparation.py
src/binara/internal/io/: states.py
src/binara/internal/visualization/: likelihood.py
tests/end_to_end_tests/: test_basic_mcmc_run.py
tests/end_to_end_tests/basic_mcmc_run/: configuration.toml  test_basic_mcmc_run.py
tests/end_to_end_tests/basic_mcmc_run/expected_resulting_data_directory/lightcurves/mcmc_lightcurves/: 220052771_sector_6_OMP_1.out
tests/end_to_end_tests/basic_mcmc_run/expected_resulting_data_directory/pars/: pars.220052771_sector_6_OMP_1.out
tests/end_to_end_tests/basic_mcmc_run/expected_resulting_sessions_directory/tic_id_220052771_sector_6/: configuration.toml  folded_observed_and_model_light_curves.txt  parameters.txt  states.txt
tests/end_to_end_tests/basic_mcmc_run/template_starting_data_directory/magnitudes/: 220052771.txt
tests/end_to_end_tests/basic_mcmc_run_multi_sector/: configuration.toml  test_basic_mcmc_multi_sector_run.py  test_basic_multi_sector_mcmc_run.py
tests/end_to_end_tests/basic_mcmc_run_multi_sector/expected_resulting_data_directory/lightcurves/mcmc_lightcurves/: 150284425_sector_all_gmag_OMP_1.out
tests/end_to_end_tests/basic_mcmc_run_multi_sector/expected_resulting_data_directory/pars/: pars.150284425_sector_all_gmag_OMP_1.out
tests/end_to_end_tests/basic_mcmc_run_multi_sector/expected_resulting_sessions_directory/tic_id_150284425_sector_-1/: folded_observed_and_model_light_curves.txt  parameters.txt  py_initialize.txt  states.txt
tests/end_to_end_tests/basic_mcmc_run_multi_sector/template_starting_data_directory/tic_id_150284425_sector_-1/: folded_observed_light_curve.txt
tests/end_to_end_tests/basic_mcmc_run_multi_sector/template_starting_input_data_directory/tic_id_150284425_sector_-1/: magnitudes_and_colors.txt
tests/end_to_end_tests/basic_mcmc_run_multi_sector_new_data_structure/expected_resulting_sessions_directory/tic_id_150284425_sector_-1/: parameters.txt
tests/end_to_end_tests/basic_mcmc_run_new_data_structure/: test_basic_mcmc_run.py
tests/end_to_end_tests/basic_mcmc_run_new_data_structure/expected_resulting_sessions_directory/tic_id_220052771_sector_6/: py_initialize.txt
tests/end_to_end_tests/basic_py_init_run/: test_basic_py_init.py
tests/end_to_end_tests/basic_py_init_run/expected_resulting_input_data_directory/tic_id_220052771_sector_6/: py_initialize.txt
tests/end_to_end_tests/basic_py_init_run/template_starting_input_data_directory/tic_id_220052771_sector_6/: magnitudes_and_colors.txt
tests/integration_tests/: test_calculate_light_curve.py  test_calculate_light_curve_without_limb_darkening.py
tests/unit_tests/io/: test_states_io.py
