[build-system]
requires = [
    "scikit-build-core >=0.10",
    "nanobind >=2.0.0",
    "typing_extensions >=4.0.0",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "binara"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "gobo",
]

[project.urls]
Homepage = "https://github.com/golmschenk/binara"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
skip = ["pp*", "cp36-*", "cp37-*", "cp38-*", "cp39-*", "*_i686", "*musllinux*", "*-win32"]
build-verbosity = "3"
test-command = "pytest {project}/tests"
test-requires = ["pytest"]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
